--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "ipaddr.js": "^1.9.0",
     "jest": "^24.8.0",
     "jsdoc": "^3.6.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^2.9.1",
     "mongoose": "^5.4.2",
     "mongoose-schema-jsonschema": "^1.2.1",
